tests/success/comptime/optional_lifetime.bz
function test1(: move ?int32)
{
}

function test()
{
	(consteval {
		let _: ?int32 = null;

		for (let _ in 0..10)
		{
			let _: ?int32 = null;
		}

		test1(null as ?int32);
	});
}
