tests/error/if_consteval_error_else_block.bz
function test()
{
	let _ = if consteval (false) {} else { [ null as int32 ] };
}
